<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".UserDetails">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/user_icon"
        android:layout_gravity="center"
        android:contentDescription="@string/icon">
    </ImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textNameValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origin"
            android:textSize="18sp">

        </TextView>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/originSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </androidx.appcompat.widget.AppCompatSpinner>

    </LinearLayout>
    <TextView
        android:id="@+id/originError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="14sp"
        android:textColor="@android:color/holo_red_light">
    </TextView>
    <RadioGroup
        android:id="@+id/osGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/osInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/os"
            android:textSize="18sp">

        </TextView>

        <RadioButton
            android:id="@+id/androidRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android"
            android:textSize="16sp">

        </RadioButton>

        <RadioButton
            android:id="@+id/iosRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ios"
            android:textSize="16sp">

        </RadioButton>

    </RadioGroup>
    <TextView
        android:id="@+id/osError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="14sp"
        android:textColor="@android:color/holo_red_light">
    </TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="confirmInput"
        android:text="@string/confirm">
    </Button>

</LinearLayout>